// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Digital fund should create success emails 1`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: Thank you for getting in touch with The National Lottery Community
 Fund!
MIME-Version: 1.0

Content-Type: text/plain
Content-Transfer-Encoding: quoted-printable

 Thank you for getting in touch.

Here is a copy of the information you've =
submitted. We'll be in touch as soon as we can.

YOUR DETAILS
YOUR NAME
Example Person

EMAIL ADDRESS
example@example.com

ORGANISATION NAME
Test Organisation

DATA PROTECTION
The National Lottery Community Fund is a=
 public body with a duty to distribute National Lottery and other money in =
grants for good
causes. We use the personal data you provide, such as =
contact details for individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data =
with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety =
measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful =
basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection =
[https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to =
time.
Content-Type: text/html
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
        <style>
            @import =
url('https://use.typekit.net/yyc1dgh.css');
        </style>
       =20
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,=
p{color:#333;font-weight:400;font-size:20px;line-height:1.35}.fonts-loaded =
.fonts-loaded body,.fonts-loaded .fonts-loaded p{font-family:caecilia-sans-=
text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,h6{font-weight:700;line-height:=
1.2;margin:0 0 20px;color:#e5007d}.fonts-loaded .fonts-loaded h1,.=
fonts-loaded .fonts-loaded h2,.fonts-loaded .fonts-loaded h3,.fonts-loaded =
.fonts-loaded h4,.fonts-loaded .fonts-loaded h5,.fonts-loaded .fonts-loaded=
 h6{font-family:caecilia,sans-serif}h1{font-size:26px}h2{font-size:22px}h3{=
font-size:18px}h4{font-size:16px}h5{font-size:14px}h6{font-size:12px}a{colo=
r:#0075b0;font-weight:800}.logo{margin-bottom:20px;display:block}.logo =
img{width:200px}.summary h4{border-bottom:1px solid =
#e5007d;padding-bottom:3px}.summary h4,.summary h5{font-weight:800}small{di=
splay:block;font-size:11px;color:#666;margin-bottom:10px}.=
space-above{margin-top:50px}table{font-size:90%;box-sizing:border-box;width=
:100%;max-width:48em;border-collapse:separate;border-spacing:0;table-layout=
:fixed;margin:0 0 1em;padding:0}table tr{background-color:#f6f7f9}table =
tr:nth-child(2n){background-color:#edeff3}table tr td{border:solid =
#fff;border-width:4px 0 0 4px}table tr td:first-of-type{border-left:0}table=
 th,table thead{font-weight:400;vertical-align:middle}.fonts-loaded .=
fonts-loaded table th,.fonts-loaded .fonts-loaded table =
thead{font-family:caecilia,sans-serif}table thead{color:#fff;background-col=
or:#e5007d}table thead tr{background-color:transparent}table thead tr =
th{border-left:4px solid #ff008b}table thead tr th:first-of-type{border-lef=
t:0}table td,table th{padding:1em;text-align:left;word-wrap:break-word}tabl=
e td>p,table th>p{margin:0}table td{vertical-align:top}table td =
a{display:table-cell;overflow-wrap:break-word;word-wrap:break-word;word-bre=
ak:break-all;word-break:break-word;-webkit-hyphens:auto;-ms-hyphens:auto;hy=
phens:auto}
/*# sourceMappingURL=3Demails.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: 10px; margin: auto; color: #333; =
font-weight: 400; font-size: 20px; line-height: 1.35;\\">
        <div class=3D\\"logo\\" style=3D\\"margin-bottom: 20px; display: block;\\">
            <img alt=3D\\"\\" src=3D\\"data:image/svg+xml;base64,=
PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTE=
uMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5LjU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLj=
g5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzL=
jMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAx=
Ljg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMjMtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA=
4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyLjM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMT=
QgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTguNjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwL=
TQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTYtMS42OSAxNCAxNCAwIDAgMC01LjUyIDEg=
MTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLjY2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSA=
xNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxIDEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS=
42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjggMTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3I=
DE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCAwIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2=
YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuODQgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQ=
uMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5IDAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwID=
EgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEgMjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExI=
DUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCAyOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0=
IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5IDAgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTE=
uODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2IDExLjA2IDAgMCAwIDMuOC0yLjkxIDEzID=
EzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAwIDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwL=
TIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjgtMi45MSAxMi43OCAxMi43OCAwIDAgMC0x=
MC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLjkxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzU=
gNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxIDEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC=
4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAxMS44MSAxMS44MSAwIDAgMCA1LjEyIDEuM=
Dd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5=
LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOGgtNy4xNGwtOS41OC0xNi44LTEgMjguODF=
IMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI4ID=
Q5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4L=
jgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDExIDAgMCAwIDEuODggNi42NHExLjg4IDIu=
NTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LTIuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS4=
4NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuMzMgMCAwIDEtMS41NSA4LjUxIDE3LjkyID=
E3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUgMCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgM=
CAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTguNTUtMS40IDE5LjczIDE5LjczIDAgMCAx=
LTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LTYuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQ=
tOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40MVY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMT=
kuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAwaDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyL=
jk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4=
LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0IDktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXY=
xOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhdGggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNT=
J2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcuMzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoN=
i43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTYgNS44MSAxMS43MyAxMS43MyAwIDAgMCAx=
Ljk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOTFhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSA=
xIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3IDguODcgMCAwIDAgMy42Ny0yLjkyIDEyID=
EyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAwIDAgMCAuNTYtNS44MXYtMjcuNDhoNi43N=
nYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDcuNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40=
MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xIDI0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE=
2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwIDAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMC=
AwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUuNjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4O=
WwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAw=
IDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMSA4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI=
4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwLjU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOS=
AxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcuMzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xI=
DQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS40MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44=
MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LTQuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTg=
uNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yMiAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS=
0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAgMCAwLTExLjgxLjUybC01LjEyLTEyLjMzY=
zQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC04LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40=
OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNjYgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC4=
3OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgNy42MSAyLjA5IDIwLjIxIDEwLjI0IDM4Lj=
A2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4zYy02LjU1LTYuODItMTcuMzEtMTMuNjQtM=
zAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTcuODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5=
LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2IDExLjggMy4xNCAxNyAxMi41OSAyMS41MSA=
zMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxLjM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLj=
ktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0xMy4zOSA1My4xNSA1My4xNSAwIDAgMCAyL=
jM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIv=
PjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLjU0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ=
2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5LTQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi=
4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2L=
TEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhj=
LTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4LjA5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0=
iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xOS4xNi01My43OC00Ny43Ni01LTE5LjY4LT=
ExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUuMjQtMS44NC01LjI0LTUuMjUgMC0zLjY5I=
DYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODcgOCAzMS4yMSAxOC42OGw1LjYxLTIuMDlj=
LjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMTIuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDY=
tNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuNiAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNz=
ggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYxIDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgN=
S40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4=
LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2IDEuODUgMTEuOC4wNyAxNi4yNi01LjE4IDE=
uMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1IDcuMiAwIDExLjkxLTQuMTMgMTUuNDktMT=
EuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZ=
D0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40=
LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI=
1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZiIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4Lj=
M4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuN=
yAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi01MC41NWE2LjEgNi4xIDAgMSAxLTYuMDkt=
Ni4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bTI1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSA=
xLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40OCA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3ID=
UuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAgMCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgM=
CAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQzLTIuMTggNS43IDUuNyAwIDAgMSAuNDMt=
Mi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2IDUuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTk=
gNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1LjMyIDAgMCAxIDIuMTguNDUgNS41IDUuNS=
AwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAxIC40NCAyLjE5IDUuNDQgNS40NCAwIDAgM=
S0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyAxLjc4IDUuNDcgNS40NyAwIDAgMS00IDEu=
NjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjk=
tMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuMyA0LjMgMCAwIDAtLjkxLTEuNDQgNC41ID=
QuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAwLTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtM=
S40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDUgNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0=
IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMCAxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDE=
uNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40NCAwIDAgMSAuOTEuMTUgMS44NCAxLjg0ID=
AgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYuNTMgMS41NCAxLjU0IDAgMCAxIC4xMS41O=
SAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY4IDAgMCAxLS44My42NmwxLjM4IDIuMzRo=
LTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzI=
tLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgMCAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMC=
AwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQxZDFiIi8+PC9zdmc+\\" style=3D\\"width:=
 200px;\\" width=3D\\"200\\">
        </div>

       =20
   =20

    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35;\\">Thank you for getting in touch.</p>
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35;\\">Here is a copy of the information you've submitted. =
We'll be in touch as soon as we can.</p>

   =20
    <div =
class=3D\\"summary\\">
       =20
            <h4 style=3D\\"line-height: 1.2; =
margin: 0 0 20px; color: #e5007d; font-size: 16px; border-bottom: 1px solid=
 #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-weight: 800;\\">Your name</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35;\\">Example =
Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">example@example.com</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Organisation name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
    </div>



       =20
           =20

            <h5 class=3D\\"space-above\\" style=3D\\"font-weight: 700; =
line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 14px; =
margin-top: 50px;\\">Data protection</h5>
            <small =
style=3D\\"display: block; font-size: 11px; color: #666; margin-bottom: =
10px;\\">The National Lottery Community Fund is a public body with a duty to =
distribute National Lottery and other money in grants for good causes. We =
use the personal data you provide, such as contact details for individuals =
at your organisation, to help you apply for a grant and to assess your =
application.</small>
            <small style=3D\\"display: block; font-size:=
 11px; color: #666; margin-bottom: 10px;\\">We may share your personal data =
with organisations which help us with our grant making activities or others=
 which have a legitimate interest in our work or have funded your grant. We=
 will only share personal data which they need to carry out their work and =
subject to appropriate safety measures.</small>
            <small =
style=3D\\"display: block; font-size: 11px; color: #666; margin-bottom: =
10px;\\">Our Data Protection and Privacy Notice gives more information about =
how we store and use personal data and the lawful basis for this. Please =
read the full Notice which is published on our website at <a =
href=3D\\"https://www.tnlcommunityfund.org.uk/data-protection\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/data-protection</a> or contact us to request a hard copy. The Notice may=
 be updated from time to time.</small>
       =20
    </body>
</html>

"
`;

exports[`Digital fund should create success emails 2`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: New submission for Digital Fund Strand 1 from Test Organisation
MIME-Version: 1.0

Content-Type: text/plain
Content-Transfer-Encoding: quoted-printable

 NEW SUBMISSION FOR DIGITAL FUND STRAND 1
YOUR DETAILS
YOUR NAME
Example Person

EMAIL ADDRESS
example@example.com

ORGANISATION NAME
Test Organisation

DATA PROTECTION
The National Lottery Community Fund is a=
 public body with a duty to distribute National Lottery and other money in =
grants for good
causes. We use the personal data you provide, such as =
contact details for individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data =
with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety =
measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful =
basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection =
[https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to =
time.
Content-Type: text/html
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
        <style>
            @import =
url('https://use.typekit.net/yyc1dgh.css');
        </style>
       =20
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,=
p{color:#333;font-weight:400;font-size:20px;line-height:1.35}.fonts-loaded =
.fonts-loaded body,.fonts-loaded .fonts-loaded p{font-family:caecilia-sans-=
text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,h6{font-weight:700;line-height:=
1.2;margin:0 0 20px;color:#e5007d}.fonts-loaded .fonts-loaded h1,.=
fonts-loaded .fonts-loaded h2,.fonts-loaded .fonts-loaded h3,.fonts-loaded =
.fonts-loaded h4,.fonts-loaded .fonts-loaded h5,.fonts-loaded .fonts-loaded=
 h6{font-family:caecilia,sans-serif}h1{font-size:26px}h2{font-size:22px}h3{=
font-size:18px}h4{font-size:16px}h5{font-size:14px}h6{font-size:12px}a{colo=
r:#0075b0;font-weight:800}.logo{margin-bottom:20px;display:block}.logo =
img{width:200px}.summary h4{border-bottom:1px solid =
#e5007d;padding-bottom:3px}.summary h4,.summary h5{font-weight:800}small{di=
splay:block;font-size:11px;color:#666;margin-bottom:10px}.=
space-above{margin-top:50px}table{font-size:90%;box-sizing:border-box;width=
:100%;max-width:48em;border-collapse:separate;border-spacing:0;table-layout=
:fixed;margin:0 0 1em;padding:0}table tr{background-color:#f6f7f9}table =
tr:nth-child(2n){background-color:#edeff3}table tr td{border:solid =
#fff;border-width:4px 0 0 4px}table tr td:first-of-type{border-left:0}table=
 th,table thead{font-weight:400;vertical-align:middle}.fonts-loaded .=
fonts-loaded table th,.fonts-loaded .fonts-loaded table =
thead{font-family:caecilia,sans-serif}table thead{color:#fff;background-col=
or:#e5007d}table thead tr{background-color:transparent}table thead tr =
th{border-left:4px solid #ff008b}table thead tr th:first-of-type{border-lef=
t:0}table td,table th{padding:1em;text-align:left;word-wrap:break-word}tabl=
e td>p,table th>p{margin:0}table td{vertical-align:top}table td =
a{display:table-cell;overflow-wrap:break-word;word-wrap:break-word;word-bre=
ak:break-all;word-break:break-word;-webkit-hyphens:auto;-ms-hyphens:auto;hy=
phens:auto}
/*# sourceMappingURL=3Demails.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: 10px; margin: auto; color: #333; =
font-weight: 400; font-size: 20px; line-height: 1.35;\\">
        <div class=3D\\"logo\\" style=3D\\"margin-bottom: 20px; display: block;\\">
            <img alt=3D\\"\\" src=3D\\"data:image/svg+xml;base64,=
PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTE=
uMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5LjU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLj=
g5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzL=
jMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAx=
Ljg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMjMtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA=
4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyLjM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMT=
QgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTguNjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwL=
TQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTYtMS42OSAxNCAxNCAwIDAgMC01LjUyIDEg=
MTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLjY2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSA=
xNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxIDEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS=
42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjggMTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3I=
DE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCAwIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2=
YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuODQgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQ=
uMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5IDAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwID=
EgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEgMjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExI=
DUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCAyOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0=
IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5IDAgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTE=
uODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2IDExLjA2IDAgMCAwIDMuOC0yLjkxIDEzID=
EzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAwIDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwL=
TIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjgtMi45MSAxMi43OCAxMi43OCAwIDAgMC0x=
MC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLjkxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzU=
gNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxIDEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC=
4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAxMS44MSAxMS44MSAwIDAgMCA1LjEyIDEuM=
Dd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5=
LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOGgtNy4xNGwtOS41OC0xNi44LTEgMjguODF=
IMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI4ID=
Q5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4L=
jgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDExIDAgMCAwIDEuODggNi42NHExLjg4IDIu=
NTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LTIuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS4=
4NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuMzMgMCAwIDEtMS41NSA4LjUxIDE3LjkyID=
E3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUgMCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgM=
CAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTguNTUtMS40IDE5LjczIDE5LjczIDAgMCAx=
LTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LTYuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQ=
tOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40MVY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMT=
kuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAwaDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyL=
jk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4=
LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0IDktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXY=
xOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhdGggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNT=
J2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcuMzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoN=
i43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTYgNS44MSAxMS43MyAxMS43MyAwIDAgMCAx=
Ljk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOTFhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSA=
xIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3IDguODcgMCAwIDAgMy42Ny0yLjkyIDEyID=
EyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAwIDAgMCAuNTYtNS44MXYtMjcuNDhoNi43N=
nYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDcuNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40=
MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xIDI0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE=
2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwIDAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMC=
AwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUuNjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4O=
WwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAw=
IDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMSA4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI=
4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwLjU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOS=
AxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcuMzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xI=
DQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS40MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44=
MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LTQuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTg=
uNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yMiAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS=
0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAgMCAwLTExLjgxLjUybC01LjEyLTEyLjMzY=
zQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC04LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40=
OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNjYgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC4=
3OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgNy42MSAyLjA5IDIwLjIxIDEwLjI0IDM4Lj=
A2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4zYy02LjU1LTYuODItMTcuMzEtMTMuNjQtM=
zAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTcuODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5=
LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2IDExLjggMy4xNCAxNyAxMi41OSAyMS41MSA=
zMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxLjM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLj=
ktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0xMy4zOSA1My4xNSA1My4xNSAwIDAgMCAyL=
jM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIv=
PjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLjU0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ=
2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5LTQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi=
4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2L=
TEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhj=
LTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4LjA5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0=
iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xOS4xNi01My43OC00Ny43Ni01LTE5LjY4LT=
ExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUuMjQtMS44NC01LjI0LTUuMjUgMC0zLjY5I=
DYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODcgOCAzMS4yMSAxOC42OGw1LjYxLTIuMDlj=
LjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMTIuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDY=
tNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuNiAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNz=
ggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYxIDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgN=
S40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4=
LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2IDEuODUgMTEuOC4wNyAxNi4yNi01LjE4IDE=
uMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1IDcuMiAwIDExLjkxLTQuMTMgMTUuNDktMT=
EuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZ=
D0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40=
LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI=
1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZiIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4Lj=
M4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuN=
yAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi01MC41NWE2LjEgNi4xIDAgMSAxLTYuMDkt=
Ni4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bTI1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSA=
xLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40OCA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3ID=
UuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAgMCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgM=
CAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQzLTIuMTggNS43IDUuNyAwIDAgMSAuNDMt=
Mi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2IDUuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTk=
gNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1LjMyIDAgMCAxIDIuMTguNDUgNS41IDUuNS=
AwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAxIC40NCAyLjE5IDUuNDQgNS40NCAwIDAgM=
S0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyAxLjc4IDUuNDcgNS40NyAwIDAgMS00IDEu=
NjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjk=
tMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuMyA0LjMgMCAwIDAtLjkxLTEuNDQgNC41ID=
QuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAwLTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtM=
S40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDUgNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0=
IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMCAxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDE=
uNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40NCAwIDAgMSAuOTEuMTUgMS44NCAxLjg0ID=
AgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYuNTMgMS41NCAxLjU0IDAgMCAxIC4xMS41O=
SAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY4IDAgMCAxLS44My42NmwxLjM4IDIuMzRo=
LTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzI=
tLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgMCAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMC=
AwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQxZDFiIi8+PC9zdmc+\\" style=3D\\"width:=
 200px;\\" width=3D\\"200\\">
        </div>

       =20
    <h1 =
style=3D\\"font-weight: 700; line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 26px;\\">New submission for Digital Fund Strand 1</h1>
   =20
    <div class=3D\\"summary\\">
       =20
            <h4 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
16px; border-bottom: 1px solid #e5007d; padding-bottom: 3px; font-weight: =
800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Your name</h5>
                       =20
                           =
 <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height: 1=
.35;\\">Example Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">example@example.com</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Organisation name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
    </div>



       =20
           =20

            <h5 class=3D\\"space-above\\" style=3D\\"font-weight: 700; =
line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 14px; =
margin-top: 50px;\\">Data protection</h5>
            <small =
style=3D\\"display: block; font-size: 11px; color: #666; margin-bottom: =
10px;\\">The National Lottery Community Fund is a public body with a duty to =
distribute National Lottery and other money in grants for good causes. We =
use the personal data you provide, such as contact details for individuals =
at your organisation, to help you apply for a grant and to assess your =
application.</small>
            <small style=3D\\"display: block; font-size:=
 11px; color: #666; margin-bottom: 10px;\\">We may share your personal data =
with organisations which help us with our grant making activities or others=
 which have a legitimate interest in our work or have funded your grant. We=
 will only share personal data which they need to carry out their work and =
subject to appropriate safety measures.</small>
            <small =
style=3D\\"display: block; font-size: 11px; color: #666; margin-bottom: =
10px;\\">Our Data Protection and Privacy Notice gives more information about =
how we store and use personal data and the lawful basis for this. Please =
read the full Notice which is published on our website at <a =
href=3D\\"https://www.tnlcommunityfund.org.uk/data-protection\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/data-protection</a> or contact us to request a hard copy. The Notice may=
 be updated from time to time.</small>
       =20
    </body>
</html>

"
`;

exports[`Reaching communities should create success emails 1`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: Thank you for getting in touch with The National Lottery Community
 Fund!
MIME-Version: 1.0

Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

 Thank you for getting in touch with us.

You will see a copy of the =
information you submitted below. This will be forwarded to one of our =
funding officers who will get in
touch within fifteen working days to let =
you know if we can help.

In the meantime, you can find out more about our =
funding and how we can support your community on our website:=20
www.tnlcommunityfund.org.uk/england [https://www.tnlcommunityfund.org.=
uk/england]

Thanks,

The National Lottery Community Fund

YOUR INFORMATION
YOUR IDEA
BRIEFLY EXPLAIN YOUR IDEA AND WHY IT=E2=80=99LL MAKE A DIFFERENCE
Test idea

PROJECT LOCATION
SELECT ALL REGIONS THAT APPLY
South West

PROJECT LOCATION
London

YOUR ORGANISATION
LEGAL NAME
Test Organisation

YOUR DETAILS
FIRST NAME
Example

LAST NAME
Person

EMAIL ADDRESS
example@example.com

PHONE NUMBER
03454102030

DATA PROTECTION
The National Lottery Community Fund is a public body with a duty to =
distribute National Lottery and other money in grants for good
causes. We use the personal data you provide, such as contact details for =
individuals at your organisation, to help you apply for
a grant and to assess your application. We may share your personal data =
with organisations which help us with our grant making
activities or others which have a legitimate interest in our work or have =
funded your grant. We will only share personal data
which they need to carry out their work and subject to appropriate safety =
measures. Our Data Protection and Privacy Notice gives
more information about how we store and use personal data and the lawful =
basis for this. Please read the full Notice which is
published on our website at www.tnlcommunityfund.org.uk/data-protection =
[https://www.tnlcommunityfund.org.uk/data-protection] or
contact us to request a hard copy. The Notice may be updated from time to =
time.
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
        <style>
            @import =
url('https://use.typekit.net/yyc1dgh.css');
        </style>
       =20
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,=
p{color:#333;font-weight:400;font-size:20px;line-height:1.35}.fonts-loaded =
.fonts-loaded body,.fonts-loaded .fonts-loaded p{font-family:caecilia-sans-=
text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,h6{font-weight:700;line-height:=
1.2;margin:0 0 20px;color:#e5007d}.fonts-loaded .fonts-loaded h1,.=
fonts-loaded .fonts-loaded h2,.fonts-loaded .fonts-loaded h3,.fonts-loaded =
.fonts-loaded h4,.fonts-loaded .fonts-loaded h5,.fonts-loaded .fonts-loaded=
 h6{font-family:caecilia,sans-serif}h1{font-size:26px}h2{font-size:22px}h3{=
font-size:18px}h4{font-size:16px}h5{font-size:14px}h6{font-size:12px}a{colo=
r:#0075b0;font-weight:800}.logo{margin-bottom:20px;display:block}.logo =
img{width:200px}.summary h4{border-bottom:1px solid =
#e5007d;padding-bottom:3px}.summary h4,.summary h5{font-weight:800}small{di=
splay:block;font-size:11px;color:#666;margin-bottom:10px}.=
space-above{margin-top:50px}table{font-size:90%;box-sizing:border-box;width=
:100%;max-width:48em;border-collapse:separate;border-spacing:0;table-layout=
:fixed;margin:0 0 1em;padding:0}table tr{background-color:#f6f7f9}table =
tr:nth-child(2n){background-color:#edeff3}table tr td{border:solid =
#fff;border-width:4px 0 0 4px}table tr td:first-of-type{border-left:0}table=
 th,table thead{font-weight:400;vertical-align:middle}.fonts-loaded .=
fonts-loaded table th,.fonts-loaded .fonts-loaded table =
thead{font-family:caecilia,sans-serif}table thead{color:#fff;background-col=
or:#e5007d}table thead tr{background-color:transparent}table thead tr =
th{border-left:4px solid #ff008b}table thead tr th:first-of-type{border-lef=
t:0}table td,table th{padding:1em;text-align:left;word-wrap:break-word}tabl=
e td>p,table th>p{margin:0}table td{vertical-align:top}table td =
a{display:table-cell;overflow-wrap:break-word;word-wrap:break-word;word-bre=
ak:break-all;word-break:break-word;-webkit-hyphens:auto;-ms-hyphens:auto;hy=
phens:auto}
/*# sourceMappingURL=3Demails.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: 10px; margin: auto; color: #333; =
font-weight: 400; font-size: 20px; line-height: 1.35;\\">
        <div class=3D\\"logo\\" style=3D\\"margin-bottom: 20px; display: block;\\">
            <img alt=3D\\"\\" src=3D\\"data:image/svg+xml;base64,=
PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTE=
uMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5LjU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLj=
g5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzL=
jMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAx=
Ljg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMjMtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA=
4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyLjM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMT=
QgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTguNjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwL=
TQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTYtMS42OSAxNCAxNCAwIDAgMC01LjUyIDEg=
MTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLjY2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSA=
xNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxIDEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS=
42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjggMTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3I=
DE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCAwIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2=
YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuODQgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQ=
uMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5IDAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwID=
EgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEgMjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExI=
DUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCAyOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0=
IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5IDAgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTE=
uODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2IDExLjA2IDAgMCAwIDMuOC0yLjkxIDEzID=
EzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAwIDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwL=
TIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjgtMi45MSAxMi43OCAxMi43OCAwIDAgMC0x=
MC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLjkxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzU=
gNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxIDEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC=
4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAxMS44MSAxMS44MSAwIDAgMCA1LjEyIDEuM=
Dd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5=
LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOGgtNy4xNGwtOS41OC0xNi44LTEgMjguODF=
IMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI4ID=
Q5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4L=
jgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDExIDAgMCAwIDEuODggNi42NHExLjg4IDIu=
NTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LTIuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS4=
4NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuMzMgMCAwIDEtMS41NSA4LjUxIDE3LjkyID=
E3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUgMCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgM=
CAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTguNTUtMS40IDE5LjczIDE5LjczIDAgMCAx=
LTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LTYuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQ=
tOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40MVY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMT=
kuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAwaDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyL=
jk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4=
LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0IDktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXY=
xOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhdGggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNT=
J2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcuMzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoN=
i43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTYgNS44MSAxMS43MyAxMS43MyAwIDAgMCAx=
Ljk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOTFhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSA=
xIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3IDguODcgMCAwIDAgMy42Ny0yLjkyIDEyID=
EyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAwIDAgMCAuNTYtNS44MXYtMjcuNDhoNi43N=
nYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDcuNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40=
MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xIDI0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE=
2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwIDAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMC=
AwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUuNjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4O=
WwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAw=
IDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMSA4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI=
4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwLjU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOS=
AxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcuMzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xI=
DQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS40MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44=
MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LTQuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTg=
uNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yMiAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS=
0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAgMCAwLTExLjgxLjUybC01LjEyLTEyLjMzY=
zQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC04LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40=
OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNjYgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC4=
3OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgNy42MSAyLjA5IDIwLjIxIDEwLjI0IDM4Lj=
A2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4zYy02LjU1LTYuODItMTcuMzEtMTMuNjQtM=
zAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTcuODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5=
LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2IDExLjggMy4xNCAxNyAxMi41OSAyMS41MSA=
zMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxLjM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLj=
ktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0xMy4zOSA1My4xNSA1My4xNSAwIDAgMCAyL=
jM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIv=
PjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLjU0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ=
2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5LTQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi=
4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2L=
TEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhj=
LTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4LjA5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0=
iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xOS4xNi01My43OC00Ny43Ni01LTE5LjY4LT=
ExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUuMjQtMS44NC01LjI0LTUuMjUgMC0zLjY5I=
DYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODcgOCAzMS4yMSAxOC42OGw1LjYxLTIuMDlj=
LjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMTIuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDY=
tNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuNiAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNz=
ggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYxIDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgN=
S40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4=
LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2IDEuODUgMTEuOC4wNyAxNi4yNi01LjE4IDE=
uMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1IDcuMiAwIDExLjkxLTQuMTMgMTUuNDktMT=
EuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZ=
D0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40=
LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI=
1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZiIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4Lj=
M4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuN=
yAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi01MC41NWE2LjEgNi4xIDAgMSAxLTYuMDkt=
Ni4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bTI1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSA=
xLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40OCA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3ID=
UuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAgMCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgM=
CAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQzLTIuMTggNS43IDUuNyAwIDAgMSAuNDMt=
Mi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2IDUuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTk=
gNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1LjMyIDAgMCAxIDIuMTguNDUgNS41IDUuNS=
AwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAxIC40NCAyLjE5IDUuNDQgNS40NCAwIDAgM=
S0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyAxLjc4IDUuNDcgNS40NyAwIDAgMS00IDEu=
NjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjk=
tMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuMyA0LjMgMCAwIDAtLjkxLTEuNDQgNC41ID=
QuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAwLTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtM=
S40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDUgNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0=
IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMCAxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDE=
uNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40NCAwIDAgMSAuOTEuMTUgMS44NCAxLjg0ID=
AgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYuNTMgMS41NCAxLjU0IDAgMCAxIC4xMS41O=
SAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY4IDAgMCAxLS44My42NmwxLjM4IDIuMzRo=
LTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzI=
tLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgMCAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMC=
AwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQxZDFiIi8+PC9zdmc+\\" style=3D\\"width:=
 200px;\\" width=3D\\"200\\">
        </div>

       =20
    <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35;\\">Thank you for =
getting in touch with us.</p>

    <p style=3D\\"color: #333; font-weight: =
400; font-size: 20px; line-height: 1.35;\\">You will see a copy of the =
information you submitted below. This will be forwarded to one of our =
funding officers who will get in touch within fifteen working days to let =
you know if we can help.</p>
    <p style=3D\\"color: #333; font-weight: 400;=
 font-size: 20px; line-height: 1.35;\\">In the meantime, you can find out =
more about our funding and how we can support your community on our =
website: <a href=3D\\"https://www.tnlcommunityfund.org.uk/england\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/england</a></p>
    <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">Thanks,</p>
    <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35;\\"><strong>The =
National Lottery Community Fund</strong></p>

    <h2 style=3D\\"font-weight:=
 700; line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
22px;\\">Your information</h2>
   =20
    <div class=3D\\"summary\\">
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 16px; border-bottom: 1px solid #e5007d; padding-bottom:=
 3px; font-weight: 800;\\">Your idea</h4>
           =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">Briefly explain your idea and why it=E2=80=99ll =
make a difference</h5>
                       =20
                         =
   <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height:=
 1.35;\\">Test idea</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 16px; border-bottom: 1px solid #e5007d; =
padding-bottom: 3px; font-weight: 800;\\">Project location</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-weight: 800;\\">Select all regions that=
 apply</h5>
                       =20
                            <p =
style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height: 1.=
35;\\">South West</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">Project location</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">London</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 16px; border-bottom: 1px =
solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your =
organisation</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Legal name</h5>
                       =20
                          =
  <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height: =
1.35;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 16px; border-bottom: 1px solid #e5007d; =
padding-bottom: 3px; font-weight: 800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">First name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">Example</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-weight: 800;\\">Last name</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35;\\">Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">example@example.com</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Phone number</h5>
                       =20
                        =
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35;\\">03454102030</p>
                       =20
                   =20
       =20
    </div>



       =20
           =20

            <h5 class=3D\\"space-above\\" style=3D\\"font-weight: 700; =
line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: 14px; =
margin-top: 50px;\\">Data protection</h5>
            <small =
style=3D\\"display: block; font-size: 11px; color: #666; margin-bottom: =
10px;\\">The National Lottery Community Fund is a public body with a duty to =
distribute National Lottery and other money in grants for good causes. We =
use the personal data you provide, such as contact details for individuals =
at your organisation, to help you apply for a grant and to assess your =
application.</small>
            <small style=3D\\"display: block; font-size:=
 11px; color: #666; margin-bottom: 10px;\\">We may share your personal data =
with organisations which help us with our grant making activities or others=
 which have a legitimate interest in our work or have funded your grant. We=
 will only share personal data which they need to carry out their work and =
subject to appropriate safety measures.</small>
            <small =
style=3D\\"display: block; font-size: 11px; color: #666; margin-bottom: =
10px;\\">Our Data Protection and Privacy Notice gives more information about =
how we store and use personal data and the lawful basis for this. Please =
read the full Notice which is published on our website at <a =
href=3D\\"https://www.tnlcommunityfund.org.uk/data-protection\\" =
style=3D\\"color: #0075b0; font-weight: 800;\\">www.tnlcommunityfund.org.=
uk/data-protection</a> or contact us to request a hard copy. The Notice may=
 be updated from time to time.</small>
       =20
    </body>
</html>

"
`;

exports[`Reaching communities should create success emails 2`] = `
"Content-Type: multipart/alternative;
From: The National Lottery Community Fund <noreply@tnlcommunityfund.org.uk>
To: Example Person <example@example.com>
Subject: New idea submission from website: Test Organisation
MIME-Version: 1.0

Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

 A CUSTOMER HAS SUBMITTED AN IDEA FROM THE REACHING COMMUNITIES & =
PARTNERSHIPS WEB FORM.
The details they provided are included below:

CUSTOMER INFORMATION
YOUR DETAILS
FIRST NAME
Example

LAST NAME
Person

EMAIL ADDRESS
example@example.com

PHONE NUMBER
03454102030

YOUR ORGANISATION
LEGAL NAME
Test Organisation

PROJECT LOCATION
SELECT ALL REGIONS THAT APPLY
South West

PROJECT LOCATION
London

YOUR IDEA
BRIEFLY EXPLAIN YOUR IDEA AND WHY IT=E2=80=99LL MAKE A DIFFERENCE
Test idea
Content-Type: text/html; charset=utf-8
Content-Transfer-Encoding: quoted-printable

<!doctype html>
<html class=3D\\"fonts-loaded\\">=20
    <head>
        <meta charset=3D\\"UTF-8\\">
        <style>
            @import =
url('https://use.typekit.net/yyc1dgh.css');
        </style>
       =20
            <style type=3D\\"text/css\\">
body{padding:10px;margin:auto}body,=
p{color:#333;font-weight:400;font-size:20px;line-height:1.35}.fonts-loaded =
.fonts-loaded body,.fonts-loaded .fonts-loaded p{font-family:caecilia-sans-=
text,Trebuchet MS,sans-serif}h1,h2,h3,h4,h5,h6{font-weight:700;line-height:=
1.2;margin:0 0 20px;color:#e5007d}.fonts-loaded .fonts-loaded h1,.=
fonts-loaded .fonts-loaded h2,.fonts-loaded .fonts-loaded h3,.fonts-loaded =
.fonts-loaded h4,.fonts-loaded .fonts-loaded h5,.fonts-loaded .fonts-loaded=
 h6{font-family:caecilia,sans-serif}h1{font-size:26px}h2{font-size:22px}h3{=
font-size:18px}h4{font-size:16px}h5{font-size:14px}h6{font-size:12px}a{colo=
r:#0075b0;font-weight:800}.logo{margin-bottom:20px;display:block}.logo =
img{width:200px}.summary h4{border-bottom:1px solid =
#e5007d;padding-bottom:3px}.summary h4,.summary h5{font-weight:800}small{di=
splay:block;font-size:11px;color:#666;margin-bottom:10px}.=
space-above{margin-top:50px}table{font-size:90%;box-sizing:border-box;width=
:100%;max-width:48em;border-collapse:separate;border-spacing:0;table-layout=
:fixed;margin:0 0 1em;padding:0}table tr{background-color:#f6f7f9}table =
tr:nth-child(2n){background-color:#edeff3}table tr td{border:solid =
#fff;border-width:4px 0 0 4px}table tr td:first-of-type{border-left:0}table=
 th,table thead{font-weight:400;vertical-align:middle}.fonts-loaded .=
fonts-loaded table th,.fonts-loaded .fonts-loaded table =
thead{font-family:caecilia,sans-serif}table thead{color:#fff;background-col=
or:#e5007d}table thead tr{background-color:transparent}table thead tr =
th{border-left:4px solid #ff008b}table thead tr th:first-of-type{border-lef=
t:0}table td,table th{padding:1em;text-align:left;word-wrap:break-word}tabl=
e td>p,table th>p{margin:0}table td{vertical-align:top}table td =
a{display:table-cell;overflow-wrap:break-word;word-wrap:break-word;word-bre=
ak:break-all;word-break:break-word;-webkit-hyphens:auto;-ms-hyphens:auto;hy=
phens:auto}
/*# sourceMappingURL=3Demails.css.map */
</style>
       =20
    </head>
    <body style=3D\\"padding: 10px; margin: auto; color: #333; =
font-weight: 400; font-size: 20px; line-height: 1.35;\\">
        <div class=3D\\"logo\\" style=3D\\"margin-bottom: 20px; display: block;\\">
            <img alt=3D\\"\\" src=3D\\"data:image/svg+xml;base64,=
PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCA2MTE=
uMiAxOTguNDMiPjxwYXRoIGQ9Ik0yMjIuODMgMTI5LjU1YTI2LjcxIDI2LjcxIDAgMCAxLTIxLj=
g5IDEwLjM5IDI3LjM0IDI3LjM0IDAgMCAxLTEwLjM5LTEuOTQgMjMuNCAyMy40IDAgMCAxLTEzL=
jMtMTMuNDEgMjcuOTIgMjcuOTIgMCAwIDEtMS44OC0xMC4zOSAyOC4zOSAyOC4zOSAwIDAgMSAx=
Ljg1LTEwLjM2IDI0LjE5IDI0LjE5IDAgMCAxIDUuMjMtOC4yNSAyMy44NiAyMy44NiAwIDAgMSA=
4LjEtNS40NSAyNyAyNyAwIDAgMSAxMC4zOS0yIDMyLjM2IDMyLjM2IDAgMCAxIDExLjg3IDIuMT=
QgMjAuMzYgMjAuMzYgMCAwIDEgOS4xOSA3LjVsLTguNjIgOC43YTE2LjY1IDE2LjY1IDAgMCAwL=
TQuOTQtNC41IDEyLjY0IDEyLjY0IDAgMCAwLTYuNTYtMS42OSAxNCAxNCAwIDAgMC01LjUyIDEg=
MTEuMzEgMTEuMzEgMCAwIDAtNC4wOSAyLjg4IDEyLjY2IDEyLjY2IDAgMCAwLTIuNTUgNC4zMSA=
xNi42MiAxNi42MiAwIDAgMCAwIDEwLjc5IDEyLjkxIDEyLjkxIDAgMCAwIDIuNjIgNC4zNSAxMS=
42OSAxMS42OSAwIDAgMCA0LjA5IDIuODcgMTMuMjggMTMuMjggMCAwIDAgNS4zNCAxIDE0LjA3I=
DE0LjA3IDAgMCAwIDctMS41MiAxOC40IDE4LjQgMCAwIDAgNS4yNy00Ljc1ek0yNTAgMTM5Ljg2=
YTI2LjMxIDI2LjMxIDAgMCAxLTEwLjIxLTIgMjQuODQgMjQuODQgMCAwIDEtOC4xLTUuMzggMjQ=
uMTQgMjQuMTQgMCAwIDEtNS4zNS04LjE4IDI5IDI5IDAgMCAxIDAtMjAuNzEgMjQgMjQgMCAwID=
EgMTMuNDUtMTMuNTIgMjguMTkgMjguMTkgMCAwIDEgMjAuNDUgMCAyNCAyNCAwIDAgMSA4LjExI=
DUuMzQgMjQuNiAyNC42IDAgMCAxIDUuMzEgOC4xOCAyOSAyOSAwIDAgMSAwIDIwLjcxIDI0IDI0=
IDAgMCAxLTEzLjQyIDEzLjU2IDI2LjQ5IDI2LjQ5IDAgMCAxLTEwLjI0IDJ6bTAtMTIuMjNhMTE=
uODEgMTEuODEgMCAwIDAgNS4xMi0xLjA3IDExLjA2IDExLjA2IDAgMCAwIDMuOC0yLjkxIDEzID=
EzIDAgMCAwIDIuMzYtNC4zNSAxNy43OCAxNy43OCAwIDAgMCAwLTEwLjYxIDEzIDEzIDAgMCAwL=
TIuMzYtNC4zNSAxMS4xOCAxMS4xOCAwIDAgMC0zLjgtMi45MSAxMi43OCAxMi43OCAwIDAgMC0x=
MC4yNCAwIDExLjI4IDExLjI4IDAgMCAwLTMuOCAyLjkxIDEyLjg0IDEyLjg0IDAgMCAwLTIuMzU=
gNC4zNSAxNy41NyAxNy41NyAwIDAgMCAwIDEwLjYxIDEyLjg0IDEyLjg0IDAgMCAwIDIuMzUgNC=
4zNSAxMS4xNiAxMS4xNiAwIDAgMCAzLjggMi45MSAxMS44MSAxMS44MSAwIDAgMCA1LjEyIDEuM=
Dd6bTMyLjQ4LTM4LjFoMTIuNDZMMzA2Ljg4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI5IDQ5=
LjE1aC0xMy4yTDMxOSAxMDkuODdsLTguNjMgMTYuOGgtNy4xNGwtOS41OC0xNi44LTEgMjguODF=
IMjgwLjJ6bTU4LjYxIDBoMTIuNDVMMzY1LjQ4IDExMWwxMS43MS0yMS40NGgxMi41M2wyLjI4ID=
Q5LjEyaC0xMy4xOGwtMS4xOC0yOC44MS04LjY0IDE2LjhoLTcuMTRsLTkuNTgtMTYuOC0xIDI4L=
jgxSDMzOC44em01Ni43NCAwaDEzdjI4LjgxYTExIDExIDAgMCAwIDEuODggNi42NHExLjg4IDIu=
NTggNi4yMyAyLjU4YzIuODkgMCA1LS44OCA2LjE5LTIuNjJhMTEuMjMgMTEuMjMgMCAwIDAgMS4=
4NC02LjZWODkuNTNoMTMuMjN2MzBhMjIuMzMgMjIuMzMgMCAwIDEtMS41NSA4LjUxIDE3LjkyID=
E3LjkyIDAgMCAxLTQuMzggNi40NSAxOS41IDE5LjUgMCAwIDEtNi43MSA0LjA2IDI1IDI1IDAgM=
CAxLTguNTEgMS40IDI1LjIyIDI1LjIyIDAgMCAxLTguNTUtMS40IDE5LjczIDE5LjczIDAgMCAx=
LTYuNzQtNCAxNy43NCAxNy43NCAwIDAgMS00LjM5LTYuNDEgMjIuNiAyMi42IDAgMCAxLTEuNTQ=
tOC41OXptNDkuNjkgMGgxMS44NmwxOC44NyAyNy40MVY4OS41M2gxMi45djQ5LjE1SDQ4MGwtMT=
kuNjEtMjguMjJ2MjguMjJoLTEyLjg3em01MS4zNyAwaDEzLjA1djQ5LjE1aC0xMy4wNXpNNTMyL=
jk0IDEwMWgtMTUuMTFWODkuNTNoNDMuMjZWMTAxaC0xNXYzNy43M2gtMTMuMTV6bTQ3LjY4IDE4=
LjA4bC0xNy40Ny0yOS41NWgxNWw5LjU4IDE3LjU0IDktMTcuNTRoMTQuNDdMNTkzLjY2IDExOXY=
xOS42N2gtMTN6IiBmaWxsPSIjZTUwYjdlIi8+PHBhdGggZD0iTTE3Ny41MyAxNTAuMjRoMjkuNT=
J2Ni4wNmgtMjIuNzZ2MTQuMzdoMTcuMzN2NmgtMTcuMzN2MjAuNTdoLTYuNzZ6bTM0LjU4IDBoN=
i43N3YyNy40N2EyNy41NCAyNy41NCAwIDAgMCAuNTYgNS44MSAxMS43MyAxMS43MyAwIDAgMCAx=
Ljk0IDQuNTVBOC43NyA4Ljc3IDAgMCAwIDIyNSAxOTFhMTQuMzQgMTQuMzQgMCAwIDAgNS44MSA=
xIDE0LjExIDE0LjExIDAgMCAwIDUuNzQtMSA4Ljg3IDguODcgMCAwIDAgMy42Ny0yLjkyIDEyID=
EyIDAgMCAwIDEuOTQtNC41NSAyOC4yMiAyOC4yMiAwIDAgMCAuNTYtNS44MXYtMjcuNDhoNi43N=
nYyOS4wOWEyNC4zNiAyNC4zNiAwIDAgMS0xLjEyIDcuNTEgMTYuOTEgMTYuOTEgMCAwIDEtMy40=
MiA2IDE2IDE2IDAgMCAxLTUuODEgNC4wNiAyNC4xIDI0LjEgMCAwIDEtMTYuNjMgMCAxNi4yIDE=
2LjIgMCAwIDEtNS44NS00LjA2IDE2LjQgMTYuNCAwIDAgMS0zLjQ1LTYgMjQuMzYgMjQuMzYgMC=
AwIDEtMS4xMy03LjUxem00NC41NCAwaDYuODNsMjUuNjUgMzYuN3YtMzYuN2g2LjYydjQ3SDI4O=
WwtMjUuNzItMzYuNzh2MzYuNzhoLTYuNjJ6bTQ1Ljk5IDBoMTUuNzFhMzYuMTUgMzYuMTUgMCAw=
IDEgMTAuMjUgMS4zNyAyMS4zOCAyMS4zOCAwIDAgMSA4LjA3IDQuMyAyMCAyMCAwIDAgMSA1LjI=
4IDcuMzYgMjYuNjkgMjYuNjkgMCAwIDEgMS45IDEwLjU3IDI1Ljg2IDI1Ljg2IDAgMCAxLTEuOS=
AxMC4zMiAyMC4xNCAyMC4xNCAwIDAgMS01LjI4IDcuMzMgMjEuNzcgMjEuNzcgMCAwIDEtOC4xI=
DQuMzMgMzUuODUgMzUuODUgMCAwIDEtMTAuMjkgMS40MWgtMTUuNjR6bTE1LjUgNDAuOTNxOC44=
MSAwIDEzLjctNC4zM3Q0LjktMTIuODZxMC04LjU5LTQuNzItMTMuMTR0LTE0LjA5LTQuNTRoLTg=
uNTN2MzQuODd6TTE0NCA4OS40OGExMy4yMiAxMy4yMiAwIDAgMC03Ljg4IDMuMTVjLjgtOS4xOS=
0yLjYxLTE2LTguOTEtMTguMzZhMTYuNSAxNi41IDAgMCAwLTExLjgxLjUybC01LjEyLTEyLjMzY=
zQuNzItMTEuNTUgMTMtMjUuNjEgMTMtMzcuMTYgMC04LjkxLTQuNS0xNS40OC0xMy4xNi0xNS40=
OC01LjI1IDAtMTEgNC4zLTE1LjQyIDkuODZDODguNjYgNi4zIDgyLjM2IDAgNzUuNTUgMCA2NC4=
3OSAwIDYwLjMzIDEwLjc3IDYwLjMzIDE5Ljk0YzAgNy42MSAyLjA5IDIwLjIxIDEwLjI0IDM4Lj=
A2YTMyNS40NSAzMjUuNDUgMCAwIDAtMTQuNyAzOC4zYy02LjU1LTYuODItMTcuMzEtMTMuNjQtM=
zAuOTUtMTMuNjRhMzEuNjEgMzEuNjEgMCAwIDAtMTcuODQgNUMyLjYyIDkwLjggMCA5NSAwIDk5=
LjQ2YzAgNi41NSA0LjQ2IDExIDExLjI4IDEyLjg2IDExLjggMy4xNCAxNyAxMi41OSAyMS41MSA=
zMS4yMiA4LjEzIDMzLjU4IDI5LjExIDUzLjc4IDYxLjM4IDUzLjc4YTYyIDYyIDAgMCAwIDYxLj=
ktNjEuOTMgNzIuMDggNzIuMDggMCAwIDAtMS4zMS0xMy4zOSA1My4xNSA1My4xNSAwIDAgMCAyL=
jM2LTcuODdDMTYwIDk5LjcxIDE1NC41IDg5LjQ4IDE0NCA4OS40OCIgZmlsbD0iIzFkMWQxYiIv=
PjxwYXRoIGQ9Ik0xMjQuNTMgODEuNThjNS40OCAyLjU0IDUuOSAxMy45NC4zOSAyNy41OC00LjQ=
2IDEzLjEzLTEwLjg4IDIxLjE1LTE2Ljg2IDIxLjE5LTQuNzEgMC04LjY1LTMuMzQtOC42NS0xMi=
4yNiAwLTE2LjggMTMuOC00MS43MyAyNS4xMi0zNi41MW0tNTYuNi02MS42NGMwLTUuNSAyLjM2L=
TEyLjA2IDcuNjItMTIuMDZxNS40OSAwIDEzLjM3IDE3LjMxQTE0MCAxNDAgMCAwIDAgNzUgNDhj=
LTQuNzMtMTIuMzQtNy4wOS0yMS41Mi03LjA5LTI4LjA5IiBmaWxsPSIjZmZmIi8+PHBhdGggZD0=
iTTk0LjE3IDE4OS40NmMtMjcuNTQgMC00Ni40My0xOS4xNi01My43OC00Ny43Ni01LTE5LjY4LT=
ExLjI4LTMyLjc5LTI3LjI4LTM3LTEuODMtLjUzLTUuMjQtMS44NC01LjI0LTUuMjUgMC0zLjY5I=
DYtOC45MyAxNy4wNS04LjkzIDEzLjA3IDAgMjMuODcgOCAzMS4yMSAxOC42OGw1LjYxLTIuMDlj=
LjgzLTEwLjc1IDYuMzEtMjUuNDUgMTUuOTEtNDYgMTIuMDYtMjYgMjQuMzItNDMuNjcgMzIuNDY=
tNDMuNDQgMi42LjA2IDUuNjkgMy4xNCA1LjY5IDcuNiAwIDEwLjc2LTkuNDkgMjYuODgtMTcuNz=
ggNDQuNDMtLjgzIDEuNzYtNC42MSAxMC4wOC00LjYxIDEwLjA4bDUuNDIgMi4zNGMxLjc4LTMgN=
S40Ni0xMC4xNyA2LTExLjM3bDQuMDYgOWMtOC42NSA3LjM2LTE2LjI2IDI0LjY2LTE2LjI2IDM4=
LjMyIDAgMTAgNC40NiAxNi4xOSAxMSAxOC4yOSA2IDEuODUgMTEuOC4wNyAxNi4yNi01LjE4IDE=
uMDYgNi4zMSA1LjI1IDExLjc1IDEzLjM4IDExLjc1IDcuMiAwIDExLjkxLTQuMTMgMTUuNDktMT=
EuMjIgMS4zIDMzLjA2LTI2IDU3LjczLTU0LjU3IDU3LjczIiBmaWxsPSIjZmZmIi8+PHBhdGggZ=
D0iTTE1MCAxMTMuMDljLTEuODQgMTEtOC41NCAyMy4yOS0xNi43OSAyMy4yOS03Ljg3IDAtNy40=
LTEwLjQzLTUuNTctMTYuNzMgMi44OC0xMS4yOCAxMC41Ni0yMy4wOCAxNi4zMy0yMy4wOCA1LjI=
1IDAgNy42IDcuMDggNiAxNi41MiIgZmlsbD0iI2ZmZiIvPjxwYXRoIGQ9Ik0xMjIuMTcgMTY4Lj=
M4Yy0yMy4zNiAxMy4yNi00NS4wOCA0Ljc5LTUzLjI4LTE5LjRsNi43OS0zLjE4YzYuNjggMTkuN=
yAyNS45MiAyNS4xIDQzLjczIDE1Ljgzem0tNi4zNi01MC41NWE2LjEgNi4xIDAgMSAxLTYuMDkt=
Ni4wOSA2LjA5IDYuMDkgMCAwIDEgNi4wOSA2LjA5bTI1LjY2IDcuMzhhNS40OSA1LjQ5IDAgMSA=
xLTUuNDgtNS40OSA1LjQ4IDUuNDggMCAwIDEgNS40OCA1LjQ5TTEzMS4xNiAyNS4xOGE1LjQ3ID=
UuNDcgMCAwIDEtMi4xOC0uNDMgNS4zNyA1LjM3IDAgMCAxLTEuNzYtMS4xOSA1LjcgNS43IDAgM=
CAxLTEuMjItMS43OCA1LjYxIDUuNjEgMCAwIDEtLjQzLTIuMTggNS43IDUuNyAwIDAgMSAuNDMt=
Mi4xOSA1LjYxIDUuNjEgMCAwIDEgMS4xOC0xLjc2IDUuNTMgNS41MyAwIDAgMSAxLjgyLTEuMTk=
gNS4zOCA1LjM4IDAgMCAxIDIuMi0uNDUgNS4zMiA1LjMyIDAgMCAxIDIuMTguNDUgNS41IDUuNS=
AwIDAgMSAyLjkyIDIuOTUgNS41MyA1LjUzIDAgMCAxIC40NCAyLjE5IDUuNDQgNS40NCAwIDAgM=
S0uNDQgMi4xOCA1LjY4IDUuNjggMCAwIDEtMS4xNyAxLjc4IDUuNDcgNS40NyAwIDAgMS00IDEu=
NjJ6bTAtMS4wN2E0LjM3IDQuMzcgMCAwIDAgMS43NS0uMzQgNC4yOSA0LjI5IDAgMCAwIDIuMjk=
tMi4zOSA0Ljg5IDQuODkgMCAwIDAgMC0zLjUzIDQuMyA0LjMgMCAwIDAtLjkxLTEuNDQgNC41ID=
QuNSAwIDAgMC0xLjM4LTEgNC40OCA0LjQ4IDAgMCAwLTMuNDcgMCA0LjU5IDQuNTkgMCAwIDAtM=
S40IDEgNC40OSA0LjQ5IDAgMCAwLS45MiAxLjQ0IDUgNSAwIDAgMCAwIDMuNTMgNC4zNCA0LjM0=
IDAgMCAwIC45MiAxLjQzIDQuMDggNC4wOCAwIDAgMCAxLjM4IDEgNC4zNiA0LjM2IDAgMCAwIDE=
uNzQuM3ptLTEuOTMtNy4zNmgyLjE3YTIuNDQgMi40NCAwIDAgMSAuOTEuMTUgMS44NCAxLjg0ID=
AgMCAxIC42Mi40IDEuMjYgMS4yNiAwIDAgMSAuMzYuNTMgMS41NCAxLjU0IDAgMCAxIC4xMS41O=
SAxLjgzIDEuODMgMCAwIDEtLjI3IDEgMS42OCAxLjY4IDAgMCAxLS44My42NmwxLjM4IDIuMzRo=
LTEuMjJsLTEuMjYtMi4xOWgtLjl2Mi4xN2gtMS4wN3ptMi4xMyAyLjYxYTEgMSAwIDAgMCAuNzI=
tLjI0Ljg5Ljg5IDAgMCAwIC4yMi0uNjQuNzkuNzkgMCAwIDAtLjI0LS42MyAxLjIyIDEuMjIgMC=
AwIDAtLjc3LS4yaC0xdjEuNzF6IiBmaWxsPSIjMWQxZDFiIi8+PC9zdmc+\\" style=3D\\"width:=
 200px;\\" width=3D\\"200\\">
        </div>

       =20
    <h1 =
style=3D\\"font-weight: 700; line-height: 1.2; margin: 0 0 20px; color: =
#e5007d; font-size: 26px;\\">A customer has submitted an idea from the =
Reaching Communities &amp; Partnerships web form.</h1>
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35;\\">The details they provided are included below:</p>
    <h2 class=3D\\"space-above\\" style=3D\\"font-weight: 700; line-height: 1.2; =
margin: 0 0 20px; color: #e5007d; font-size: 22px; margin-top: =
50px;\\">Customer information</h2>
   =20
    <div class=3D\\"summary\\">
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 16px; border-bottom: 1px solid #e5007d; =
padding-bottom: 3px; font-weight: 800;\\">Your details</h4>
           =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">First name</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">Example</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-weight: 800;\\">Last name</h5>
                       =20
                            <p style=3D\\"color: =
#333; font-weight: 400; font-size: 20px; line-height: 1.35;\\">Person</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Email address</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">example@example.com</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Phone number</h5>
                       =20
                        =
    <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; =
line-height: 1.35;\\">03454102030</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 16px; border-bottom: 1px =
solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your =
organisation</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 14px; font-weight: =
800;\\">Legal name</h5>
                       =20
                          =
  <p style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height: =
1.35;\\">Test Organisation</p>
                       =20
                   =20
                   =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 16px; border-bottom: 1px solid #e5007d; =
padding-bottom: 3px; font-weight: 800;\\">Project location</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-weight: 800;\\">Select all regions that=
 apply</h5>
                       =20
                            <p =
style=3D\\"color: #333; font-weight: 400; font-size: 20px; line-height: 1.=
35;\\">South West</p>
                       =20
                   =20
                   =20
                   =20
                        <h5 =
style=3D\\"line-height: 1.2; margin: 0 0 20px; color: #e5007d; font-size: =
14px; font-weight: 800;\\">Project location</h5>
                       =20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">London</p>
                       =20
                   =20
       =20
            <h4 style=3D\\"line-height: 1.=
2; margin: 0 0 20px; color: #e5007d; font-size: 16px; border-bottom: 1px =
solid #e5007d; padding-bottom: 3px; font-weight: 800;\\">Your idea</h4>
           =20
                   =20
                   =20
                        <h5 style=3D\\"line-height: 1.2; margin: 0 0 20px; =
color: #e5007d; font-size: 14px; font-weight: 800;\\">Briefly explain your =
idea and why it=E2=80=99ll make a difference</h5>
                       =
=20
                            <p style=3D\\"color: #333; font-weight: 400; =
font-size: 20px; line-height: 1.35;\\">Test idea</p>
                       =
=20
                   =20
       =20
    </div>



       =20
    </body>
</html>

"
`;
